# URPG-RPG-Game-Designer

./: .aider.conf.yml  .aiderignore  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  EULA.md  PLAN.md  PRIVACY_POLICY.md  README.md  RELEASE_CHECKLIST.md  RISKS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  URPG_Blueprint_v3_1_Integrated.docx  URPG_Blueprint_v3_1_Integrated.md  URPG_MASTER_NATIVE_ABSORPTION_AND_PGMMV_ROADMAP_2026-04-18.md  URPG_NATIVE_ABSORPTION_ROADMAP_2026-04-18.md  URPG_PGMMV_SUPPORT_PLAN.md  URPG_grid_part_level_builder_plan.md  URPG_private_asset_intake_plan.md  URPG_repo_intake_plan.md  WORKLOG.md  _wizard_probe.cpp  gitleaks.toml  test_export.csv  test_export.json  tests_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-gates.yml  security-scans.yml
apps/audio_smoke/: main.cpp
apps/editor/: editor_app_panels.cpp  editor_app_panels.h  main.cpp
apps/runtime/: main.cpp
build-local/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  urpg.sln  urpg_compat_tests-b12d07c_include-Debug.cmake  urpg_compat_tests-b12d07c_include-MinSizeRel.cmake  urpg_compat_tests-b12d07c_include-RelWithDebInfo.cmake  urpg_compat_tests-b12d07c_include-Release.cmake  urpg_compat_tests-b12d07c_include.cmake  urpg_compat_tests-b12d07c_tests-Debug.cmake  urpg_compat_tests.vcxproj  urpg_compat_tests.vcxproj.filters  urpg_core.vcxproj  urpg_core.vcxproj.filters  urpg_integration_tests-b12d07c_include-Debug.cmake  urpg_integration_tests-b12d07c_include-MinSizeRel.cmake  urpg_integration_tests-b12d07c_include-RelWithDebInfo.cmake  urpg_integration_tests-b12d07c_include-Release.cmake  urpg_integration_tests-b12d07c_include.cmake  urpg_integration_tests.vcxproj  urpg_integration_tests.vcxproj.filters  urpg_migrate.vcxproj  urpg_migrate.vcxproj.filters  urpg_presentation_release_validation.vcxproj  urpg_presentation_release_validation.vcxproj.filters  (+15 more)
cmake/: packaging.cmake  urpg_version.h.in
content/examples/: wysiwyg_template_showcase.json
content/fixtures/: ability_orchestration_fixture.json  ability_orchestration_task_graph_examples.json  ability_sandbox_fixture.json  accessibility_preview_lab_fixture.json  accessibility_report_fixture.json  achievement_platform_profile_fixture.json  achievement_registry_fixture.json  achievement_trophy_export_fixture.json  achievement_visual_builder_fixture.json  action_sequence_impact_builder_fixture.json  actor_construct_fixture.json  analytics_endpoint_profile_fixture.json  analytics_fixture.json  animated_loading_screen_builder_fixture.json  animated_pictures_timeline_fixture.json  animated_window_builder_fixture.json  asset_dlc_library_manager_fixture.json  audio_mix_presets_fixture.json  battle_authoring_fixture.json  battle_vfx_timeline_fixture.json  battle_weapon_swap_fixture.json  bestiary_discovery_system_fixture.json  biome_rule_system_fixture.json  boost_point_system_fixture.json  boss_phase_script_fixture.json  branch_coverage_preview_fixture.json  break_shield_system_fixture.json  broken_reference_repair_fixture.json  bug_report_packager_fixture.json  bullet_hell_maker_fixture.json  camera_director_fixture.json  capture_theme_presentation_fixture.json  character_appearance_composition_fixture.json  character_identity_fixture.json  collision_passability_visualizer_fixture.json  common_event_menu_builder_fixture.json  companion_banter_fixture.json  companion_command_wheel_fixture.json  controller_bindings_fixture.json  crafting_economy_loop_fixture.json  (+143 more)
content/level_libraries/: starter_dungeon.json
content/part_catalogs/: base_jrpg_parts.json  game_maker_all_parts.json
content/queryable/: README.md  feature_upgrade_tickets_2026-04-15.jsonl  github_codeberg_feature_intel_2026-04-15.jsonl  (+1 more)
docs/: AAA_RELEASE_EXECUTION_PLAN.md  AAA_RELEASE_READINESS_REPORT.md  ACCESSIBILITY_AUDITOR_CLOSURE_SIGNOFF.md  ACHIEVEMENT_REGISTRY_CLOSURE_SIGNOFF.md  AI_COPILOT_GUIDE.md  AI_SUBSYSTEM_CLOSURE_CHECKLIST.md  ANALYTICS_DISPATCHER_CLOSURE_SIGNOFF.md  APP_RELEASE_READINESS_MATRIX.md  ASSET_LIBRARY_AND_MORE_ASSETS_INTAKE.md  AUDIO_MIX_PRESETS_CLOSURE_SIGNOFF.md  BATTLE_CORE_CLOSURE_SIGNOFF.md  BATTLE_CORE_NATIVE_SPEC.md  BATTLE_CORE_REVIEWER_CHECKLIST.md  CHARACTER_IDENTITY_CLOSURE_SIGNOFF.md  COMPAT_BRIDGE_EXIT_SIGNOFF.md  COMPAT_EXIT_CHECKLIST.md  DEVELOPMENT_KICKOFF.md  EXPORT_RUNTIME_SIGNATURE_ENFORCEMENT_DESIGN.md  EXPORT_VALIDATOR_CLOSURE_SIGNOFF.md  EXTERNAL_FEATURE_UPGRADE_SHORTLIST_2026-04-15.md  EXTERNAL_FEATURE_UPGRADE_TICKETS_2026-04-15.md  FUTURE_FEATURE_ACTIONABLE_SPRINT_PLAN.md  GAF_CLOSURE_SIGNOFF.md  GOVERNANCE_FOUNDATION_CLOSURE_SIGNOFF.md  HUGGINGFACE_CURATED_IMPORTS.md  KNOWN_BREAK_WAIVERS.md  MESSAGE_TEXT_CORE_CLOSURE_SIGNOFF.md  MESSAGE_TEXT_CORE_NATIVE_SPEC.md  MOD_REGISTRY_CLOSURE_SIGNOFF.md  NATIVE_FEATURE_ABSORPTION_PLAN.md  PRESENTATION_RUNTIME_CLOSURE_SIGNOFF.md  PROGRAM_COMPLETION_STATUS.md  PROJECT_AUDIT.md  README.md  REFACTORING_SIZE_AUDIT.md  RELEASE_READINESS_MATRIX.md  RELEASE_SIGNOFF_WORKFLOW.md  SAVE_DATA_CORE_CLOSURE_SIGNOFF.md  SAVE_DATA_CORE_NATIVE_SPEC.md  SAVE_DATA_CORE_REVIEWER_CHECKLIST.md  (+18 more)
scripts/: build_indexes.py  import_assets.py  query_index.py  refresh_manifests.py
tests/: test_ability_inspector.cpp  test_ability_pattern_integration.cpp  test_ability_state_machine.cpp  test_ability_tasks.cpp  test_asset_license_audit.cpp  test_copilot_kernel.cpp  test_effect_modifiers.cpp  test_headless_play_mode.cpp  test_level_assembly.cpp  test_pattern_field_editor.cpp  test_pattern_serialization.cpp  test_plugin_manifest.cpp  test_snapshot_validator.cpp
(+2588 files in other folders)
